--- a/bmw/bikepage.html
+++ b/bmw/bikepage.html
@@ -70,6 +70,7 @@
         }
         
         .content h3 {
+            max-width: 300px;
             margin-top: 30px;
             font-weight: 600;
             font-size: 24px;
@@ -114,7 +115,8 @@
             <h2> THE BMW</h2>
             <h1> G 310 R</h1>
             <p> BMW G 310 R is a street bike available at a starting price of Rs. 3,12,479 in India. It is available in only 1 variant and 3 colours. The BMW G 310 R is powered by 313cc BS6 engine which develops a power of 33.52 bhp and a torque of 28 Nm.
-                With both front and rear disc brakes, BMW G 310 R comes up with anti-locking braking system. This G 310 R bike weighs 164 kg and has a fuel tank capacity of 11 liters.</h3>
+                With both front and rear disc brakes, BMW G 310 R comes up with anti-locking braking system. This G 310 R bike weighs 164 kg and has a fuel tank capacity of 11 liters.<p/>
+            <h3> Click on the Colour to view the bike </h3>
                 <div class="colour-select">
                     <div id="red"></div>
                     <div id="blue"></div>
